tests/error/null_auto.gw
#! [contains] NullPtrException
int i[];
foreach(a : i)
 <<< a >>>;
